# styleguide

./: .editorconfig  .gitignore  .pre-commit-hooks.yaml  .ruff.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  pyproject.toml
hooks/: no-autosquash-commits.py
styleguide/: catalog.py  cli.py  context.py
styleguide/templates/: README.md
styleguide/templates/astro/: package.json.j2  tsconfig.json.j2
styleguide/templates/base/: .editorconfig.j2  .gitignore.j2  .oxfmtrc.json.j2  .oxlintrc.json.j2  .python-version.j2  .ruff.toml.j2  .vscode__extensions.json.j2  .vscode__settings.json.j2  LICENSE.j2  _.editorconfig  _.gitignore.j2  _.oxlintrc.json  _.vscode__settings.json  _prek.toml  _prek.toml.j2  justfile.j2  prek.toml.j2
styleguide/templates/js_no_framework/: package.json.j2
styleguide/templates/no_js/: _package.json.j2  package.json.j2
styleguide/types/: action.py  file.py  manifest.py  repo.py  status.py  validators.py
styleguide/utils/: colors.py  fmt.py  jinja.py
styleguide/validators/: readme_md.py
