[project]
name = "styleguide"
version = "0.4.0"
description = "Keep scaffolding/config files consistent across my personal projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"identify>=2.6.19",
	"jinja2>=3.1.6",
	"platformdirs>=4.3.0",
	"requests>=2.34.2",
	"typer>=0.26.7",
]

[project.scripts]
sg = "styleguide.cli:app"

[dependency-groups]
dev = ["ipython>=9.15.0", "pytest>=8.3.0", "ruff>=0.15.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["styleguide"]

# Ship the root `LICENSE` as package data so that a network call is not needed
# for projects that use GNU GPL 3.0.
[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "styleguide/assets/LICENSE"
